# llm-recipe-generation

./: LICENSE  README.md  pyproject.toml
Documentation/: Strategy.ipynb  Workflow.pptx  ~$Workflow.pptx
Notebooks/: Demo_Prompt.ipynb  Prompt_Test.ipynb
modules/: Ollama.py  Validator.py  main.py  metrics.py
modules/Notebooks/: Demo_Prompt.ipynb
